# logicparser

./: .gitignore  Parser.hs  README.md  Types.hs  logicparser.cabal
app/: Main.hs
src/: Eval.hs  Lexer.x  Lib.hs  Parser.hs  Types.hs
