name:                logicparser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/logicparser#readme
license:             BSD3
license-file:        LICENSE
author:              Manuel Pacheco
maintainer:          manuelalejandropm@gmail.com
copyright:           2017 Manuel Pacheco
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
extra-source-files:  src/Lexer.x

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.9 && < 5
                     , array
                     , mtl
                     , parsec >= 3.1 && < 3.2
  build-tools:         alex
  default-language:    Haskell2010
  other-modules:       Lexer
                     , Parser
                     , Types

executable logicparser-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , logicparser
  default-language:    Haskell2010

test-suite logicparser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , logicparser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ShadowManu/logicparser
